--- a/workskin/test.html
+++ b/workskin/test.html
@@ -20,10 +20,11 @@
         <hr />
         <p class="tadc-dialog-jax">Hey Zoobie, got a sec?</p>
         <p class="tadc-dialog-zooble"><del>F**K</del>-off, Jax!</p>
-        <p class="tadc-dialog-jax">Sheesh, Zoobs, I <strong>just</strong> want to talk! Why are you always so <del>F*****G</del> agressive?</p>
+        <p class="tadc-narration"><span class="jax">Jax</span> <strong>scoffs</strong>. He <em>dismissively</em> waves his hand at <span class="zooble">Zooble</span>, turning his back to them.</p>
+        <p class="tadc-dialog-jax">Sheesh, Zoobs, I <strong>just</strong> want to <em>talk</em>! Why are you always so <del>F*****G</del> agressive?</p>
         <p class="tadc-dialog-bubble">Talk about <del>S*X</del>-appeal!</p>
         <p class="tadc-dialog-caine">Lorem ipsum dolor sit amet, <strong>consectetur</strong> adipiscing elit. Sed <em>dapibus</em> vitae risus id posuere. Donec neque arcu, pulvinar ac blandit vel, euismod sed tellus. Nunc pretium mattis nulla non feugiat. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce condimentum maximus ultrices. Suspendisse vel dolor diam. <del>****</del> Vestibulum consequat nec justo ut semper. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam molestie diam in sollicitudin mollis. Maecenas accumsan laoreet nibh quis blandit. Integer ac vehicula felis. Ut at semper diam. Fusce sodales lacus feugiat lectus consectetur gravida. </p>
-        <p>Daisy shakes her head.</p>
+        <p class="tadc-narration"><span class="daisy">Daisy</span> shakes her head.</p>
         <p class="tadc-dialog-daisy">What's going on?</p>
     </body>
 </html>
